compiler/testData/diagnostics/tests/secondaryConstructors/kt6994.fir.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class X<T> {
    constructor(t: T, i: Int): <!CYCLIC_CONSTRUCTOR_DELEGATION_CALL!>this<!>(i, 1)
}
